<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Features.Menu_Register">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/register"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/bg_login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/ic_email"
                        android:paddingEnd="10dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_edittext"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/RegisterEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="text"
                            android:textSize="20sp"
                            tools:targetApi="lollipop" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/ic_name"
                        android:paddingEnd="10dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_edittext"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/RegisterNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama"
                            android:inputType="text"
                            android:textSize="20sp"
                            tools:targetApi="lollipop" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/ic_telpon"
                        android:paddingEnd="10dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_edittext"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/RegisterTelpon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nomor_headphone"
                            android:inputType="text"
                            android:textSize="20sp"
                            tools:targetApi="lollipop" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/ic_lock"
                        android:paddingEnd="10dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_edittext"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/RegisterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/psw"
                            android:inputType="textPassword"
                            android:textSize="20dp"
                            tools:targetApi="lollipop" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:onClick="signup"
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background"
                    android:text="SIGN UP"
                    android:textColor="@android:color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="Already have an Account? "
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
                <Button
                    android:onClick="Signin"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background"
                    android:text="SIGN IN"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>