<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".Features.Pengguna.Dashboard_Pengguna">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:outlineSpotShadowColor="@color/bg_login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/bg_login"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/selamat_datang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:id="@+id/NamaPengguna"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="0dp"
                    android:text="Hemi Arjuni di Futsal 87"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:outlineSpotShadowColor="@color/bg_login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:background="@drawable/linear"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_profile"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/profile" />
                    </LinearLayout>
                    <LinearLayout
                        android:background="@drawable/linear"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_message"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/pesan" />
                    </LinearLayout>
                    <LinearLayout
                        android:background="@drawable/linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_home" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Lokasi"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:background="@drawable/linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_keranjang" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Pesanan"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:background="@drawable/linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_kontak" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Kontak"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:outlineSpotShadowColor="@color/bg_login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="210dp">
           <ViewFlipper
               android:id="@+id/ImageSlider"
               android:layout_marginBottom="10dp"
               android:layout_marginRight="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="10dp"
               android:layout_width="match_parent"
               android:layout_height="180dp"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="18sp"
            android:text="Layanan"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:outlineSpotShadowColor="@color/bg_login"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/copyright"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>